:monocle_face: explore WGS data

--- a/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
+++ b/notebooks/exploratory/0.17.0-bunop-isheep.ipynb
@@ -58,8 +58,8 @@
     "```bash\n",
     "mkdir 50K-all\n",
     "mkdir 600K-all\n",
-    "plink --allow-extra-chr --vcf 50K-all.fix-no99.sort.vcf.gz --make-bed --out 50K-all/50K-all\n",
-    "plink --allow-extra-chr --vcf 600K-all.fix-no99.sort.vcf.gz --make-bed --out 600K-all/600K-all\n",
+    "plink --chr-set 26 --allow-extra-chr --vcf 50K-all.fix-no99.sort.vcf.gz --make-bed --out 50K-all/50K-all\n",
+    "plink --chr-set 26 --allow-extra-chr --vcf 600K-all.fix-no99.sort.vcf.gz --make-bed --out 600K-all/600K-all\n",
     "```\n",
     "\n",
     "<a id='importing'></a>\n",
@@ -265,7 +265,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "109b85796c09408a9de580a75d06000a",
+       "model_id": "d76885ac801144ecaced164abd92e32a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -315,7 +315,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d58abb5398c94385b6979aa8d88413f6",
+       "model_id": "cd7e30f9e5e54b4d9e87d957404d15b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -488,7 +488,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36f74da9dc934636bc7c242815cd8634",
+       "model_id": "7d4cee28aa89424b94dcfd69badea472",
        "version_major": 2,
        "version_minor": 0
       },
@@ -538,7 +538,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bdf74b6c588f42f48f0a842d5d8d90ac",
+       "model_id": "fd2e4762c9e644b0839e599c1caaa85b",
        "version_major": 2,
        "version_minor": 0
       },
