:monocle_face: update greece foreground phenotypes

--- a/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
+++ b/notebooks/exploratory/0.14.0-bunop-exploring_greek_data.ipynb
@@ -10,6 +10,7 @@
     "* [AUTH_OVN50KV2_CHIOS_FRIZARTA_PELAGONIA](#dataset1)\n",
     "* [AUTH_OVN50KV2_CHIOS_MYTILINI_BOUTSKO](#dataset2)\n",
     "* [AUTH_OVN50KV2_CHI_BOU_MYT_FRI](#dataset4)\n",
+    "* [AUTH_OVN50KV2_CHI_FRZ](#dataset5)\n",
     "* [AUTH_GOAT53KV1_EGHORIA_SKOPELOS](#dataset3)"
    ]
   },
@@ -31,6 +32,7 @@
     "import numpy as np\n",
     "from plinkio import plinkfile\n",
     "\n",
+    "from src.features.plinkio import TextPlinkIO\n",
     "from src.features.smarterdb import global_connection, Dataset\n",
     "from src.features.utils import get_raw_dir, get_interim_dir\n",
     "\n",
@@ -662,7 +664,128 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c9fedff-d680-4b8c-8110-ac473098567c",
+   "id": "d3e75edd-5ae8-4ab0-8bea-03a32866e11e",
+   "metadata": {},
+   "source": [
+    "<a id='dataset5'></a>\n",
+    "## AUTH_OVN50KV2_CHI_FRZ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "4feff546-c273-48e1-9314-8a4f547eb061",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "file=AUTH_OVN50KV2_CHI_FRZ.zip, uploader=AUTH\n"
+     ]
+    }
+   ],
+   "source": [
+    "dataset = datasets[4]\n",
+    "print(dataset)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e24d5e89-f73d-4e9e-affc-3485ae23d2b8",
+   "metadata": {},
+   "source": [
+    "This dataset is in plink text file, so I need a custom module to open it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "85f73bf5-cbc7-4ede-a568-293396e79444",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plink_file = TextPlinkIO(prefix=str(dataset.working_dir / \"AUTH_OVN50K2_CHI_FRZ/Aristotle_University_OVN50KV02_20211124\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc00eecb-b152-4079-9263-6876d4d05a1e",
+   "metadata": {},
+   "source": [
+    "Frizarta samples are recorded as `FRZ` instead of `FRI` used until now. Change values to find records in metadata table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "4c508401-ad98-4366-ad4b-5c358276b7b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_breed(fid):\n",
+    "    if fid == 'FRZ':\n",
+    "        return 'FRI'\n",
+    "    return fid\n",
+    "\n",
+    "samples = [(check_breed(line[0]), line[1]) for line in plink_file.read_pedfile()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "27f46443-0727-47a5-a7c3-b78116d344ae",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "samples = pd.DataFrame(data=samples, columns=[\"breed_code\", \"sample_name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "96752f11-ef69-4efc-962b-952fae29b721",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# samples[\"metadata_idx\"] = np.vectorize(get_metadata_row)(samples['breed_code'], samples['sample_name'])\n",
+    "samples[\"metadata_idx\"] = samples[['breed_code', 'sample_name']].apply(lambda df: get_metadata_row(df['breed_code'], df['sample_name']), axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "2e785874-0901-4174-9c26-16c80cce99ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged = samples.join(sheep_dataset, on=\"metadata_idx\")\n",
+    "merged = merged.drop(\"selected\", axis=1)\n",
+    "merged = merged.drop(\"parsed_coding\", axis=1)\n",
+    "merged = merged.drop(\"metadata_idx\", axis=1)\n",
+    "\n",
+    "# restore FRZ code used in datafile\n",
+    "merged[\"breed_code\"] = merged[\"breed_code\"].replace(\"FRI\", \"FRZ\")\n",
+    "\n",
+    "outfile = Path(dataset.file).stem + \".xlsx\"\n",
+    "outpath = get_interim_dir() / outfile\n",
+    "merged.to_excel(str(outpath), index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "5121ea16-4c12-41a7-ac83-c672494bb590",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phenotype_file.write(outfile, arcname=f\"greece_foreground_sheep/{outfile}\")\n",
+    "outpath.unlink()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b607c181-ba0a-4e26-8781-fbbac2c79de1",
    "metadata": {},
    "source": [
     "Closing archive file for sheep"
@@ -670,8 +793,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "8b4f80d2-19b8-4c88-9282-ad3b837d2164",
+   "execution_count": 43,
+   "id": "e94c1b16-5d4e-45e0-935b-4d7a3c509f81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -690,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "id": "9c968c52-e112-4486-92d9-5712a9472019",
    "metadata": {},
    "outputs": [],
@@ -708,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "id": "552ff621-5689-4a89-86e4-c8a5e95eace4",
    "metadata": {},
    "outputs": [],
@@ -721,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "id": "e8ddf669-298a-40c8-96fe-05ce66b7f161",
    "metadata": {},
    "outputs": [],
@@ -739,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "id": "addbc70a-9691-4499-84ab-7a4cc3b1462f",
    "metadata": {},
    "outputs": [],
@@ -750,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "id": "9da3bb80-1618-4b07-bddc-e34644b21a20",
    "metadata": {},
    "outputs": [],
@@ -760,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "id": "ce21c737-07fd-4327-8823-46754803e613",
    "metadata": {},
    "outputs": [],
@@ -770,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 50,
    "id": "13657182-9d2d-447c-a18e-c743f38dc004",
    "metadata": {},
    "outputs": [],
@@ -780,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 51,
    "id": "062c8edd-5118-4516-9cab-e279dd94e368",
    "metadata": {},
    "outputs": [],
@@ -817,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 52,
    "id": "90cb14b9-f6e9-4fa9-b443-3c6fddda9284",
    "metadata": {},
    "outputs": [],
@@ -828,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "id": "660098fa-9201-4420-b7c0-2a17a3cd9c79",
    "metadata": {},
    "outputs": [],
@@ -853,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "id": "f07e20b5-f465-4cc7-9177-a53ef6167783",
    "metadata": {},
    "outputs": [],
@@ -872,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 55,
    "id": "7216e61a-2caa-452c-887b-58d00f86eccd",
    "metadata": {},
    "outputs": [],
@@ -891,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 56,
    "id": "475d0b63-b3bd-44ab-aae3-423492b4398b",
    "metadata": {},
    "outputs": [],
