:monocle_face: update summary

--- a/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
+++ b/notebooks/results/0.2.0-bunop-smarter_summary.ipynb
@@ -5,7 +5,7 @@
    "id": "3cc84f47-db82-43eb-99fd-78768ecd2a99",
    "metadata": {},
    "source": [
-    "# SMARTER SUMMARY (2021/12/09)\n",
+    "# SMARTER SUMMARY (2022/05/14)\n",
     "* [Dataset composition](#datasets-composition)\n",
     "    - [Foreground / background datasets](#foreground-vs-background-datasets)\n",
     "    - [Datasets by chip type](#datasets-by-chip-type)\n",
@@ -44,8 +44,8 @@
     "    \"\"\"Add a geometry column from locations\"\"\"\n",
     "    \n",
     "    def get_geometry(value):\n",
-    "        if isinstance(value, list):\n",
-    "            return Point(*value[0]['coordinates'])\n",
+    "        if isinstance(value, dict):\n",
+    "            return Point(*value['coordinates'][0])\n",
     "        return value\n",
     "\n",
     "    df['geometry'] = df['locations'].apply(get_geometry)\n",
@@ -93,7 +93,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = datasets['type'].value_counts().plot.pie(y=\"type\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')"
+    "plot = datasets.value_counts(\"type\").plot.pie(y=\"type\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')\n",
+    "plt.show()"
    ]
   },
   {
@@ -113,7 +114,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot = datasets['chip_name'].value_counts().plot.pie(y=\"chip\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')"
+    "plot = datasets['chip_name'].value_counts().plot.pie(y=\"chip\", figsize=(8,8), shadow=True, startangle=45, rotatelabels=45, autopct='%1.1f%%')\n",
+    "plt.show()"
    ]
   },
   {
@@ -139,7 +141,8 @@
     "background_sheeps = SampleSheep.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True)\n",
     "samples_sheep = pd.Series({\"foreground\": foreground_sheeps.count(), \"background\": background_sheeps.count()}, name=\"Sheeps\")\n",
     "plot = samples_sheep.plot.pie(y=\"Sheeps\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
-    "plt.savefig('sheep-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('sheep-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -158,9 +161,9 @@
    "outputs": [],
    "source": [
     "tmp = foreground_sheeps.to_json()\n",
-    "foreground_sheeps = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
+    "foreground_sheeps = pd.read_json(tmp).dropna(axis=0)\n",
     "tmp = background_sheeps.to_json()\n",
-    "background_sheeps = pd.read_json(tmp).dropna(thresh=1, axis=1)\n",
+    "background_sheeps = pd.read_json(tmp).dropna(axis=0)\n",
     "\n",
     "foreground_sheeps = fix_id(foreground_sheeps)\n",
     "background_sheeps = fix_id(background_sheeps)\n",
@@ -231,7 +234,8 @@
     "plot = background_sheeps.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Sheep Samples\")\n",
-    "plt.savefig('sheep-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('sheep-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -249,7 +253,8 @@
     "_ = plt.title(\"SMARTER Sheep Samples foreground\")\n",
     "_ = plt.xlim([10,40])\n",
     "_ = plt.ylim([30, 50])\n",
-    "plt.savefig('sheep-foreground.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('sheep-foreground.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -272,7 +277,8 @@
     "background_goats = SampleGoat.objects.filter(dataset__in=Dataset.objects.filter(type_=\"background\")).fields(country=True, breed=True, chip_name=True, locations=True, metadata=True)\n",
     "samples_goat = pd.Series({\"foreground\": foreground_goats.count(), \"background\": background_goats.count()}, name=\"Goats\")\n",
     "plot = samples_goat.plot.pie(y=\"Goat\", figsize=(8,8), shadow=True, rotatelabels=45, autopct='%1.1f%%')\n",
-    "plt.savefig('goat-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('goat-foreground-vs-background-pie.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -322,7 +328,8 @@
     "plot = background_goats.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Goat Samples\")\n",
-    "plt.savefig('goat-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('goat-foreground-vs-background-map.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -347,9 +354,10 @@
     "plot = background_goats.plot(ax=ax, marker='x', color='blue', markersize=5, label=\"background\")\n",
     "plot = ax.legend()\n",
     "_ = plt.title(\"SMARTER Goat Samples foreground\")\n",
-    "_ = plt.xlim([10,40])\n",
+    "_ = plt.xlim([15,35])\n",
     "_ = plt.ylim([30, 50])\n",
-    "plt.savefig('greece-goat-foreground.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('greece-goat-foreground.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -376,7 +384,8 @@
     "_ = plt.title(\"SMARTER Goat Samples foreground\")\n",
     "_ = plt.xlim([0,30])\n",
     "_ = plt.ylim([50, 70])\n",
-    "plt.savefig('sweden-goat-foreground.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('sweden-goat-foreground.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -483,7 +492,8 @@
     "    cax=cax,\n",
     "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
     "_ = ax.set_title(\"SMARTER Sheep Samples by country\")\n",
-    "plt.savefig('sheep-by-country.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('sheep-by-country.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
@@ -535,7 +545,8 @@
     "    cax=cax,\n",
     "    missing_kwds={\"color\": \"lightgrey\", \"label\": \"Missing values\"})\n",
     "_ = ax.set_title(\"SMARTER Goat Samples by country\")\n",
-    "plt.savefig('goat-by-country.png', dpi=300, bbox_inches='tight')"
+    "plt.savefig('goat-by-country.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()"
    ]
   },
   {
