--- a/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
+++ b/notebooks/exploratory/0.18.0-spanish_sheeps.ipynb
@@ -8,9 +8,8 @@
     "# Spanish sheeps\n",
     "Describe the latest data coming from Spain. They sent multiple file. File with prefix `CHUOJA` have the same samples for breeds `{'Churra', 'Ojalada'}` already imported from sheephapmap. Other files seems to have new samples, however they comes from an *affymetrix* array I don't have.\n",
     "* [SMARTER-500-ASSAF](#dataset0)\n",
-    "* [Castellana_10K](#dataset1)\n",
-    "* [Castellana_Ovine](#dataset2)\n",
-    "* [Churra](#dataset3)"
+    "* [Castellana](#dataset1)\n",
+    "* [Churra](#dataset2)"
    ]
   },
   {
@@ -187,7 +186,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2b46f43191f4064abfd10932d387036",
+       "model_id": "658f8b5e26804701bbfcdf2aa226e696",
        "version_major": 2,
        "version_minor": 0
       },
@@ -237,7 +236,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5ca8d11f62b848cf848486629a3696fb",
+       "model_id": "73bad8b1fb0c468cae51d1d694a0b6fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -280,245 +279,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8ba731d-bd05-4893-8b9a-94991a49bca3",
+   "id": "5e95baf5-be64-4cf3-829e-8af1266e21e0",
    "metadata": {},
    "source": [
     "<a id='dataset1'></a>\n",
-    "## Castellana_10K\n",
-    "Let's explore another spanish dataset. This dataset is affymetrix plink file, however it don't come from *cell file* but its a plink *tab separated* file with comments"
+    "## Castellana_Ovine\n",
+    "Let's explore another spanish dataset. This dataset contains a plink file for the whole affymetrix chip and a subset of samples made to test for the creation of a smaller and cheaper chip. Samples and SNPs are the same, so the 10K dataset could be totally ignored. The 50K file is affymetrix plink file, however it don't come from *cell file* but its a plink *tab separated* file with comments"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "30e3ad82-fd61-4d2f-9683-d0752b6c3b4b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "castellana_10K = Dataset.objects.get(file=\"Castellana_10K.zip\")\n",
-    "plinkio = CustomAffyPlinkIO(\n",
-    "    prefix=str(castellana_10K.working_dir / \"20220131 10K\"), \n",
-    "    species=castellana_10K.species, \n",
-    "    chip_name=castellana_10K.chip_name)\n",
-    "plinkio.n_of_individuals = castellana_10K.n_of_individuals"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "556438ee-fd29-4ff8-894e-76003bc5a74e",
-   "metadata": {},
-   "source": [
-    "Start by reading coordinates. Try to determine how many SNPs I have in SMARTER database"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "f5a341b5-9c68-4c96-abdc-9d18a3230fdf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plinkio.read_mapfile()\n",
-    "plinkio.fetch_coordinates(\n",
-    "    version=\"Oar_v4.0\",\n",
-    "    imported_from=\"affymetrix\",\n",
-    "    search_field=\"probeset_id\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "dc17ef65-b4b5-4882-9f1b-46176414d8ba",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I can retrieve 8639 of 9757 SNPs (11.46% missing)\n"
-     ]
-    }
-   ],
-   "source": [
-    "snps_found = len(plinkio.mapdata)-len(plinkio.filtered)\n",
-    "perc_missing = round(100 - (snps_found / len(plinkio.mapdata) * 100), 2)\n",
-    "\n",
-    "print(f\"I can retrieve {snps_found} of {len(plinkio.mapdata)} SNPs ({perc_missing}% missing)\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0f16d58e-243b-4d99-bcfc-3f9e2fabe3df",
-   "metadata": {},
-   "source": [
-    "Is this dataset in *top* coordinates?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "57b0963e-a9d2-4357-a4dd-0ee72fd96a3e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fd8404014cf4e2c97383a37a78c2546",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/186 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 1:AX-123219865: T/C <> A/G\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plinkio.is_top()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d726b8e-beaf-46b6-8b71-2d01f7299623",
-   "metadata": {},
-   "source": [
-    "Is this file in *affymetrix forward* coordinates?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "d919a6ed-9da3-402d-87e8-4a67e35ed8bb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d33c8926bb3479c90f256285a78c0d4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/186 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Error for SNP 0:AX-123235539: A/A <> T/C\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "plinkio.is_affymetrix()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c2393498-c772-455f-9e56-4be9bd802b1e",
-   "metadata": {},
-   "source": [
-    "This is the same behaviour seen for *Assaf* file. Which breeds I have in this dataset?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "2af0c309-440a-439a-aa84-db96af81a846",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Got {'SMARTER', 'Assaf'} breeds\n"
-     ]
-    }
-   ],
-   "source": [
-    "breeds_10K = set()\n",
-    "samples_10K = set()\n",
-    "for line in plinkio.read_pedfile():\n",
-    "    breed, sample = line[0], line[1]\n",
-    "    if breed not in breeds_10K:\n",
-    "        breeds_10K.add(breed)\n",
-    "    samples_10K.add(sample)\n",
-    "    \n",
-    "print(f\"Got {breeds_10K} breeds\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "08ba2944-726f-4f81-9227-fa3ce1201332",
-   "metadata": {},
-   "source": [
-    "I want to track SNP names for 10K:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "996c98e5-8af1-4bbe-b854-9d9727bd3b2e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snp_names_10K = {snp.name for snp in plinkio.mapdata}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5e95baf5-be64-4cf3-829e-8af1266e21e0",
-   "metadata": {},
-   "source": [
-    "<a id='dataset2'></a>\n",
-    "## Castellana_Ovine\n",
-    "Let's explore another spanish dataset. This dataset is affymetrix plink file, however it don't come from *cell file* but its a plink *tab separated* file with comments"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "e460e752-d67e-46e9-ada5-b987e19ef30a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "castellana_ovine = Dataset.objects.get(file=\"Castellana_Ovine.zip\")\n",
+    "castellana_ovine = Dataset.objects.get(file=\"Castellana.zip\")\n",
     "plinkio = CustomAffyPlinkIO(\n",
-    "    prefix=str(castellana_ovine.working_dir / \"20220131 Ovine\"), \n",
+    "    prefix=str(castellana_ovine.working_dir / \"Castellana/20220131 Ovine\"), \n",
     "    species=castellana_ovine.species, \n",
     "    chip_name=castellana_ovine.chip_name)\n",
     "plinkio.n_of_individuals = castellana_ovine.n_of_individuals"
@@ -534,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "id": "d0bf76b6-a84e-4827-a67e-f23ff9e29ed5",
    "metadata": {},
    "outputs": [],
@@ -549,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "7e3bc102-4ce4-4cfe-a65f-7531672735dc",
    "metadata": {},
    "outputs": [
@@ -578,14 +356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "8ef4a6bb-57b8-4545-8383-fef119fe7180",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38b4e5fc8c6d47e09d12032b6e02b53f",
+       "model_id": "281cf3c7c9b746ca9371ce9e2b1fc8cd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -609,7 +387,7 @@
        "False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,14 +406,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "c507128a-7276-45dd-bd1f-e351756e93cd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "203f7659c0494bbe9d47a8dd29f2a906",
+       "model_id": "a7a7a04c75774c98a179c509fe5bc30b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -659,7 +437,7 @@
        "False"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "712cf931-9196-4c9b-b662-ba7afc57468b",
    "metadata": {},
    "outputs": [
@@ -686,7 +464,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Got {'SMARTER', 'Assaf'} breeds\n"
+      "Got {'Assaf', 'SMARTER'} breeds\n"
      ]
     }
    ],
@@ -704,119 +482,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39a596ee-a413-4b6d-8e0f-4ad01e274f60",
-   "metadata": {},
-   "source": [
-    "There are the same breeds I see for the 10K dataset. Are samples the same?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "b64d8a1b-6d40-4b32-8a82-076d4d0313ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set() samples are exclusive\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"{samples_castellana.symmetric_difference(samples_10K)} samples are exclusive\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9fd9ffc4-c10b-432b-ac0c-66a1917ad916",
-   "metadata": {},
-   "source": [
-    "with `symmetric_difference` I took the union of the two set and I substract the intersection. This means that the samples are the same in the two dataset. Should I merge them before import? this will be better than having the same animal with two different sets of SNPs. Moreover will be easier to compare this sample with others. Track SNPs name in a set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a77a5211-bae9-4322-81ad-731d19a18c28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "snp_names_50K = {snp.name for snp in plinkio.mapdata}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2eb8a32b-3e8a-42bd-8946-e033ffc488fe",
-   "metadata": {},
-   "source": [
-    "How many snps are exclusive of 10K?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "53f376ff-0a03-45c0-a195-34a50b04cacc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "set()"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snp_names_10K.difference(snp_names_50K)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "ba08d38d-e15a-43f7-b97c-6b7bd5425b23",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "snp_names_10K.issubset(snp_names_50K)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b74c9885-1671-4ca6-b217-23cbb43e0340",
-   "metadata": {},
-   "source": [
-    "So, if 10K is a subset of the 50K snp, should I import this dataset?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9da94d4e-56c8-4c52-b5ff-2593d34afaed",
    "metadata": {},
    "source": [
-    "<a id='dataset3'></a>\n",
+    "<a id='dataset2'></a>\n",
     "## Churra\n",
     "Let's explore the last spanish dataset. This dataset is affymetrix plink file, with mixed *rs_id* and *affy ids* as SNP names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "6417ce12-1e0f-44be-9f68-ee412b1a2ebc",
    "metadata": {},
    "outputs": [],
@@ -839,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "c0f28571-a26e-4dcf-b551-a7a997c5ce14",
    "metadata": {},
    "outputs": [
@@ -864,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "a23b3927-fc01-474d-b7af-c8d7e4d45fcd",
    "metadata": {},
    "outputs": [
@@ -889,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "id": "653ccb6a-67a4-494d-883b-39cb11812e6e",
    "metadata": {},
    "outputs": [
@@ -918,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "9b95e69a-4320-43cc-a778-c1d462396619",
    "metadata": {},
    "outputs": [],
@@ -949,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "id": "9e5224d4-99ed-4f35-b068-868eb1aa1ba1",
    "metadata": {},
    "outputs": [],
